# raggity

./: .dockerignore  .gitignore  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LAUNCH.md  README.md  SECURITY.md  compose.yaml  demo.tape  index.html  mkdocs.yml  pyproject.toml  raggity.example.toml  sitemap.xml  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: binaries.yml  docker.yml  docs.yml  publish.yml  tests.yml
backends/: index.html
configuration/: index.html
demo/: index.html
deploy/: index.html
docs/: backends.md  configuration.md  demo.md  deploy.md  index.md  ingestion.md  install.md  mcp.md  quickstart.md  retrieval.md  server.md
examples/: README.md
ingestion/: index.html
install/: index.html
mcp/: index.html
packaging/: README.md  rag_entry.py  raggity.spec
packaging/aur/: PKGBUILD
packaging/choco/: README.md  raggity.nuspec
packaging/choco/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/winget/: README.md
quickstart/: index.html
retrieval/: index.html
search/: search_index.json
server/: index.html
src/raggity/: __init__.py  agentic.py  answerer.py  asyncio_utils.py  cache.py  cached_embedder.py  chunker.py  cli.py  config.py  contextual.py  conversation.py  core.py  doctor.py  embedder.py  evaluate.py  graph.py  indexer.py  llm.py  llm_openai.py  loader.py  mcp_server.py  models.py  observability.py  packing.py  prompts.py  providers.py  qdrant_store.py  query_transform.py  readers.py  registry.py  reranker.py  retriever.py  server.py  store.py  watch.py
src/raggity/connectors/: __init__.py  github.py  obsidian.py  web.py
src/raggity/web/: index.html
tests/: conftest.py  helpers_custom_reranker.py  test_agentic.py  test_answerer.py  test_cache.py  test_cached_embedder.py  test_chunker.py  test_cli.py  test_config.py  test_connectors.py  test_contextual.py  test_conversation.py  test_core.py  test_corrective.py  test_doctor.py  test_embedder.py  test_evaluate.py  test_external_backend.py  test_graph.py  test_indexer.py  test_ingest_incremental.py  test_lazy_core.py  test_llm.py  test_llm_openai.py  test_loader.py  test_mcp.py  test_models.py  test_observability.py  test_options_plumbing.py  test_pluggable_reranker.py  test_prompts.py  test_providers.py  test_qdrant_sparse.py  test_qdrant_store.py  test_query_transform.py  test_readers.py  test_registry.py  test_reranker.py  test_retriever.py  test_server.py  (+2 more)
tests/fixtures/: golden.jsonl  sample.md  sample.txt
