[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raggity"
version = "0.5.0"
description = "Local-first, top-tier RAG over your notes, docs, and PDFs — answered by Claude."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "IxMxAMAR", email = "officialamrendrasingh@gmail.com" }]
keywords = [
  "rag", "retrieval-augmented-generation", "claude", "llm", "embeddings",
  "vector-search", "hybrid-search", "fastembed", "lancedb", "qdrant",
  "local-first", "cli", "semantic-search",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Text Processing :: Indexing",
  "Environment :: Console",
]
dependencies = [
  "fastembed>=0.4",
  "lancedb>=0.15",
  "claude-agent-sdk>=0.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "platformdirs>=4.2",
  "typer>=0.12",
  "rich>=13.7",
  "pypdf>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
docs = ["python-docx>=1.1", "python-pptx>=0.6", "beautifulsoup4>=4.12"]
ocr = ["rapidocr-onnxruntime>=1.3", "pypdfium2>=4.20"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
qdrant = ["qdrant-client>=1.9"]
watch = ["watchdog>=4"]
openai = ["openai>=1.40"]
web = ["trafilatura>=1.8", "httpx>=0.27"]
graph = ["networkx>=3.1"]

[project.urls]
Homepage = "https://github.com/IxMxAMAR/raggity"
Repository = "https://github.com/IxMxAMAR/raggity"
Issues = "https://github.com/IxMxAMAR/raggity/issues"

[project.scripts]
raggity = "raggity.cli:app"
rag = "raggity.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/raggity"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
  "ignore:Using `httpx` with `starlette.testclient` is deprecated:Warning",
]
